syntax = "proto3";

package api.order.service.v1;

import "google/api/annotations.proto";

option go_package = "mall/api/order/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.order.service.v1";

service Order {
  rpc GetOrder (GetOrderRequest) returns (GetOrderReply) {
    option (google.api.http) = {
      get: "/order/{id}"
    };
  };
  rpc ListOrder (ListOrderRequest) returns (ListOrderReply);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderReply);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderReply);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderReply);
  rpc UpdateOrderPayStatus (UpdateOrderPayStatusRequest) returns (UpdateOrderPayStatusReply);
  rpc UpdateOrderShipStatus (UpdateOrderShipStatusRequest) returns (UpdateOrderShipStatusReply);
}

message UpdateOrderPayStatusRequest {
    int64 order_id = 1;
    int64 pay_status = 2;
}
message UpdateOrderPayStatusReply {
    string message = 1;
}

message UpdateOrderShipStatusRequest {
    int64 order_id = 1;
    int64 ship_status =2;
}
message UpdateOrderShipStatusReply{
    string message = 1;
}


message CreateOrderRequest {
  int64 id = 1;
  int64 pay_status = 2;
  int64 ship_status = 3;
  int64 price = 4;
  repeated OrderDetail order_detail = 5;
}
message CreateOrderReply {
  string message = 1;
}

message OrderDetail {
  int64 id = 1;
  int64 product_id = 2;
  int64 product_num = 3;
  int64 product_size_id = 4;
  int64 product_price = 5;
  int64 order_id = 6;
}

message UpdateOrderRequest {
  int64 id = 1;
  int64 pay_status = 2;
  int64 ship_status = 3;
  int64 price = 4;
  repeated OrderDetail order_detail = 5;
}
message UpdateOrderReply {
  string message = 1;
}

message DeleteOrderRequest {
  int64 id = 1;
}
message DeleteOrderReply {
  string message = 1;
}

message GetOrderRequest {
  int64 id = 1;
}
message GetOrderReply {
  int64 id = 1;
  int64 pay_status = 2;
  int64 ship_status = 3;
  int64 price = 4;
  repeated OrderDetail order_detail = 5;
}

message ListOrderRequest {}
message ListOrderReply {
  repeated GetOrderReply order = 1;
}